# adapta-shell

./: Cargo.toml  README.md
data/: hist.json
python/: edex.py
src/: main.rs
